tests/NormalTests/paczka1/fuzzy1/70443974.err
Error in line 1: NaR27Y A997 23,0
Error in line 2: X50qC A688 58,4
Error in line 5: SKkl888i3ra A997 60,1
Error in line 8: SKkl888i3ra A477 67,3
Error in line 12: A477 A997 21,6
Error in line 6: UhN7npg A477 32,7
Error in line 7: X50qC A997 12,1
Error in line 36: FJNj3Wv5zD A997 24,1
